--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <link rel="stylesheet" href="styles/style.css">
   <title>Frontend Mentor | Social proof section</title>
-
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/mobile.css">
 </head>
 
 <body>
   <section id="main">
     <img class="bg-top" src="images/bg-pattern-top-desktop.svg" alt="">
     <img class="bg-bottom" src=" images/bg-pattern-bottom-desktop.svg" alt="">
-    <div class="left-container">
-      <h1>10,000+ of our users love our products.</h1>
+    <div class="left-container  ">
+      <h1">10,000+ of our users love our products.</h1>
 
-      <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
+        <p>We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
     </div>
-    <div class="ratings">
+    <div class=" ratings ">
       <h2>
+        <img src=" images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        Rated 5 Stars in Reviews
+        <span>Rated 5 Stars in Reviews</span>
       </h2>
       <h2>
         <img src="images/icon-star.svg" alt="">
@@ -40,7 +40,7 @@
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
-        Rated 5 Stars in Report Guru
+        <span>Rated 5 Stars in Report Guru</span>
       </h2>
       <h2>
         <img src="images/icon-star.svg" alt="">
@@ -48,12 +48,12 @@
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
         <img src="images/icon-star.svg" alt="">
-        Rated 5 Stars in BestTech
+        <span>Rated 5 Stars in BestTech</span>
       </h2>
     </div>
-    <div class="card-container  ">
+    <div class="card-container ">
       <div class="card card-left ">
-        <div class="profile-header ">
+        <div class="profile-header">
           <img src="images/image-colton.jpg" alt="">
           <h3>Colton Smith</h3>
           <span>Verified Buyer</span>
