--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- displays site properly based on user's device -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
   <title>Frontend Mentor | Social proof section</title>
@@ -20,10 +18,10 @@
     <img class="bg-top" src="images/bg-pattern-top-desktop.svg" alt="">
     <img class="bg-bottom" src=" images/bg-pattern-bottom-desktop.svg" alt="">
     <div class="left-container  ">
-      <h1">10,000+ of our users love our products.</h1>
+      <h1>10,000+ of our users love our products.</h1>
 
-        <p>We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.</p>
+      <p>We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.</p>
     </div>
     <div class=" ratings ">
       <h2>
