--- a/index.html
+++ b/index.html
@@ -14,50 +14,57 @@
 </head>
 
 <body>
-  <section id="main">
+  <main id="main">
     <img class="bg-top" src="images/bg-pattern-top-desktop.svg" alt="">
     <img class="bg-bottom" src=" images/bg-pattern-bottom-desktop.svg" alt="">
-    <div class="left-container  ">
-      <h1>10,000+ of our users love our products.</h1>
+    <section class="section-top">
+      <div class="left-container">
+        <h1>10,000+ of our users love our products.</h1>
 
-      <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
+        <p class="desc">We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
+      </div>
+      <div class="ratings ">
+        <div class="rating-container">
+          <div class="icon-wrapper">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Stars in Reviews</span>
+        </div>
+        <div class="rating-container">
+          <div class="icon-wrapper">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Stars in Report Guru</span>
+        </div>
+        <div class="rating-container">
+          <div class="icon-wrapper">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+            <img src="images/icon-star.svg" alt="star">
+          </div>
+          <span>Rated 5 Stars in BestTech</span>
+        </div>
     </div>
-    <div class=" ratings ">
-      <h2>
-        <img src=" images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <span>Rated 5 Stars in Reviews</span>
-      </h2>
-      <h2>
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <span>Rated 5 Stars in Report Guru</span>
-      </h2>
-      <h2>
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <img src="images/icon-star.svg" alt="">
-        <span>Rated 5 Stars in BestTech</span>
-      </h2>
-    </div>
-    <div class="card-container ">
+    </section>
+    <section class="card-container">
       <div class="card card-left ">
         <div class="profile-header">
           <img src="images/image-colton.jpg" alt="">
           <h3>Colton Smith</h3>
           <span>Verified Buyer</span>
         </div>
-        <p>"We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
+        <p>"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time.
           Excellent!"
         </p>
       </div>
@@ -79,13 +86,13 @@
           <p>"Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</p>
         </div>
-      </div>
-  </section>
-  <div class="attribution">
+    </section>
+  </main>
+  <footer class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
       href="https://web.facebook.com/briancarlo.birondo">Brian Carlo Birondo</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
